# dgc-platform-v2

./: docker-compose.yaml
api/: Cargo.toml  Dockerfile  main.rs
cli/src/: error.rs
contracts/pike/: Dockerfile
contracts/track_and_trace/: Cargo.toml  Dockerfile
daemon/: Cargo.toml
daemon/src/: error.rs  main.rs  submitter.rs
daemon/src/rest_api/: error.rs  http.rs  key.rs  mod.rs  transaction.rs
daemon/src/rest_api/routes/: agents.rs  batches.rs
sdk/: Cargo.toml
sdk/src/protocol/pike/: payload.rs
